# nexbox-upgraded

./: .env.template  .gitignore  .gitmodules  GAME_DETECTOR_INTEGRATION.md  LICENSE  LICENSE.EXTRA  NEXBOX_UPGRADE_README.md  NexBox_用户手册.md  eslint.config.mjs  index.html  nexbox-intro.html  nexbox.iss  package-lock.json  package.json  tsconfig.json  vite.config.ts  改枪码平台介绍.md
.github/workflows/: build.yml  ci.yml
monitor/: NexBoxMonitor.csproj  Program.cs  SensorReader.cs
power-plans/: ACMEPCAMD.pow  AMD电源计划.pow  amd.pow  intel.pow
power-plans/power-plans/: Intel大核心电源计划.pow  ggOS Desktop Gaming.pow
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  clippy_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: announcement.rs  audio_eq.rs  crosshair.rs  delta_force.rs  game_detector.rs  game_launcher.rs  game_ping.rs  game_profile.rs  gpu_rename.rs  hotkey.rs  island.rs  lib.rs  main.rs  music.rs  netease_lyrics.rs  netease_lyrics.rs.bak  optimization.rs  overlay_panel.rs  screen_record.rs  shader_cache.rs  thirdparty_tools.rs  video_bg.rs
src-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src-tauri/.cargo/: config.toml
src-tauri/src-tauri/capabilities/: default.json
src-tauri/src-tauri/src/: auto_start.rs  crosshair.rs  delta_force.rs  display_filter.rs  downloader.rs  game_fps.rs  game_launcher.rs  hardware.rs  heart_rate.rs  hotkey.rs  lib.rs  network_optimize.rs  optimization.rs  overlay_panel.rs  sensor.rs  sponsor.rs  startup_manager.rs  storage_clean.rs  tray.rs
src-tauri/src-tauri/src/utils/: sys_info.rs
src/components/: AnnouncementCard.tsx  BleDeviceDialog.tsx  CloseConfirmDialog.tsx  DraggableDisplayItems.tsx  GameDetectorBadge.tsx  GameLauncher.tsx  HardwareModelCard.tsx  ImportantAnnouncementModal.tsx  MiniMusicPlayer.tsx  MusicPlayer.tsx  RandomQuote.tsx  SplashScreen.tsx  TodayPopularity.tsx  hotkey-recorder.tsx  webview-restrictions.tsx
src/config/: network-optimizer.ts  search-index.ts  system-optimizer.ts
src/contexts/: app-startup-context.tsx  background-context.tsx  music-context.tsx  theme-color-context.tsx
src/hooks/: use-glow-effect.ts
src/lib/: color-utils.ts  hardware.ts  i18n.ts  sensors.ts  theme.ts  update-checker.ts
src/locales/: de.json  en.json  fr.json  ja.json  zh-TW.json  zh.json
src/pages/: AceOptimizePage.tsx  AimTestPage.tsx  BuiltinToolsPage.tsx  ChoiceTestPage.tsx  CpsTestPage.tsx  CrosshairPage.tsx  DLSSPresetPage.tsx  DeltaForcePage.tsx  DisplayFilterPage.tsx  (+30 more)
(+18 files in other folders)
